@@ -841,20 +841,30 @@ class Theme_Blvd_Compat_WooCommerce {
 	}
 
 	/**
-	 * Up sell product display. Override Woo's woocommerce_upsell_display()
+	 * Up sell product display. Override Woo's woocommerce_upsell_display().
 	 *
 	 * @since 2.5.0
 	 */
 	public function up_sell() {
-		wc_get_template( 'single-product/up-sells.php', apply_filters('themeblvd_woocommerce_up_sell_args', array(
+
+		$args = apply_filters('themeblvd_woocommerce_up_sell_args', array(
 			'posts_per_page'	=> '-1',
 			'orderby'			=> apply_filters('woocommerce_upsells_orderby', 'rand'), // woo default filter, let's keep it for compat
+			'order'				=> 'desc',
 			'columns'			=> $this->loop_columns()
-		)));
+		));
+
+		woocommerce_upsell_display(
+			$args['posts_per_page'],
+			$args['columns'],
+			$args['orderby'],
+			$args['order']
+		);
+
 	}
 
 	/**
-	 * Cross sell product display. Override Woo's woocommerce_upsell_display()
+	 * Cross sell product display. Override Woo's woocommerce_cross_sell_display().
 	 *
 	 * @since 2.5.0
 	 */
